--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,106 +1,29 @@
 ---
-# # Homebrew setup prerequisites.
-# - name: Get current account's username.
-#   shell: whoami
-#   register: homebrew_whoami
-#   changed_when: false
-#   always_run: true
+- name: Mac Apple Store | Ensure MAS is installed
+  homebrew:
+    name: mas
+    state: present
 
-# - name: Ensure Homebrew parent directory has correct permissions.
-#   file:
-#     path: "{{ homebrew_prefix }}"
-#     mode: 0775
-#     group: admin
-#     state: directory
-#   become: yes
+- name: Mac Apple Store | Signing out
+  shell: "mas signout"
+  register: mac_account
+  when: app_store_email is defined and app_store_email != '' and app_store_password is defined and app_store_password != ''
 
-# - name: Ensure Homebrew directory exists.
-#   file:
-#     path: "{{ homebrew_install_path }}"
-#     mode: 0775
-#     owner: "{{ homebrew_whoami.stdout }}"
-#     group: admin
-#     state: directory
-#   become: yes
+- name: Mac Apple Store | Signing in.
+  shell: "mas signin \"{{ app_store_email }}\" \"{{ app_store_password }}\""
+  register: result
+  when: app_store_email is defined and app_store_email != '' and app_store_password is defined and app_store_password != '' and mac_account is defined
 
-# # Clone Homebrew.
-# - name: Ensure Homebrew is installed.
-#   git:
-#     repo: "{{ homebrew_repo }}"
-#     version: master
-#     dest: "{{ homebrew_install_path }}"
-#     update: no
-#     accept_hostkey: yes
-#     depth: 1
+- name: Mac Apple Store | Install apps.
+  shell: mas list | grep "{{ item.id }}" || mas install "{{ item.id }}"
+  with_items: "{{ mac_store_apps }}"
+  register: result
+  changed_when: result.stdout.find('Installed') != -1
+  when: app_store_email is defined and app_store_email != '' and app_store_password is defined and app_store_password != '' and mac_account is defined
 
-# # Adjust Homebrew permissions.
-# - name: Ensure proper permissions on homebrew_brew_bin_path dirs.
-#   file:
-#     path: "{{ homebrew_brew_bin_path }}"
-#     mode: 0775
-#     state: directory
-#   become: yes
-
-# - name: Ensure proper ownership on homebrew_install_path subdirs.
-#   file:
-#     path: "{{ homebrew_install_path }}"
-#     state: directory
-#     owner: "{{ homebrew_whoami.stdout }}"
-#     group: admin
-#     recurse: true
-#   become: yes
-
-# # Place brew binary in proper location and complete setup.
-# - name: Check if homebrew binary is already in place.
-#   stat: "path={{ homebrew_brew_bin_path }}/brew"
-#   register: homebrew_binary
-
-# - name: Symlink brew to homebrew_brew_bin_path.
-#   file:
-#     src: "{{ homebrew_install_path }}/bin/brew"
-#     dest: "{{ homebrew_brew_bin_path }}/brew"
-#     state: link
-#   when: homebrew_binary.stat.exists == false
-#   become: yes
-
-# - name: Force update brew after installation.
-#   command: "{{ homebrew_brew_bin_path }}/brew update --force"
-#   when: homebrew_binary.stat.exists == false
-
-# # Tap.
-# - name: Ensure configured taps are tapped.
-#   homebrew_tap: "tap={{ item }} state=present"
-#   with_items: "{{ homebrew_taps }}"
-
-# # Brew.
-# - name: Ensure configured homebrew packages are installed.
-#   homebrew: "name={{ item }} state=present"
-#   with_items: "{{ homebrew_installed_packages }}"
-
-# - name: Upgrade all homebrew packages (if configured).
-#   homebrew: update_homebrew=yes upgrade_all=yes
-#   when: homebrew_upgrade_all_packages
-
-# # Cask.
-# - name: Get list of apps installed with cask.
-#   command: >
-#     bash -l -c '{{ homebrew_brew_bin_path }}/brew cask list'
-#   register: homebrew_cask_list
-#   always_run: yes
-#   changed_when: false
-
-# # Use command module instead of homebrew_cask so appdir can be used.
-# - name: Install configured cask applications.
-#   command: >
-#     bash -l -c '{{ homebrew_brew_bin_path }}/brew cask install {{ item }} --appdir={{ homebrew_cask_appdir }}'
-#   with_items: "{{ homebrew_cask_apps }}"
-#   when: "'{{ item }}' not in homebrew_cask_list.stdout"
-
-# - name: Check for Brewfile.
-#   stat:
-#     path: "{{ homebrew_brewfile_dir }}/Brewfile"
-#   register: homebrew_brewfile
-
-# - name: Install from Brewfile.
-#   command: "brew bundle chdir={{ homebrew_brewfile_dir }}"
-#   when: homebrew_brewfile.stat.exists and homebrew_use_brewfile
+- name: Mac Apple Store | Upgrade apps.
+  shell: mas list | grep "{{ item.id }}" || mas upgrade "{{ item.id }}"
+  with_items: "{{ mac_store_apps }}"
+  register: result
+  changed_when: result.stdout.find('Installed') != -1
+  when: app_store_email is defined and app_store_email != '' and app_store_password is defined and app_store_password != '' and mac_account is defined
