Build initial version of role with idempotence.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ install:
   - "echo -e '[local]\nlocalhost ansible_connection=local' | sudo tee -a /etc/ansible/hosts > /dev/null"
 
 script:
+  # Install role dependencies.
+  - "ansible-galaxy install -r tests/requirements.yml"
+
   # Check the role/playbook's syntax.
   - "ansible-playbook tests/test.yml --syntax-check"
 
