--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,24 +1,9 @@
 ---
-homebrew_repo: https://github.com/Homebrew/brew
+mas_email: ""
+mas_password: ""
 
-homebrew_prefix: /usr/local
-homebrew_install_path: "{{ homebrew_prefix }}/Homebrew"
-homebrew_brew_bin_path: /usr/local/bin
+mas_installed_app_ids:
+  # Xcode (7.0).
+  - 497799835
 
-homebrew_installed_packages:
-  - ssh-copy-id
-  - pv
-
-homebrew_upgrade_all_packages: no
-
-homebrew_taps:
-  - homebrew/core
-  - caskroom/cask
-
-homebrew_cask_apps:
-  - firefox
-
-homebrew_cask_appdir: /Applications
-
-homebrew_use_brewfile: true
-homebrew_brewfile_dir: '~'
+mas_upgrade_all_apps: no
