Don't sign in if already signed in
The MAS sign in task fails if email and password are provided, but
the current user has already signed in, either manually or
during a previous run of the task.

This change introduces an additional check by using the exit code
of the `mas account` command: the exit code 0 indicates that
we are already signed in, 1 that we are not.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,10 +2,16 @@
 - name: Ensure MAS is installed.
   homebrew: name=mas state=present
 
+- name: Get MAS account status
+  shell: 'mas account'
+  register: mas_account_result
+  failed_when: mas_account_result.rc > 1
+  changed_when: false
+
 - name: Sign in to MAS when email and password are provided.
   shell: 'mas signin "{{ mas_email }}" "{{ mas_password }}"'
   register: mas_signin_result
-  when: mas_email != '' and mas_password != ''
+  when: mas_account_result.rc == 1 and mas_email != '' and mas_password != ''
 
 - name: List installed MAS apps.
   command: mas list
