Allow signing in interactively

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
 mas_email: ""
 mas_password: ""
-mas_installed_app_ids: [] # Deprecated
+mas_sign_in_interactively: no
+mas_is_testing: no
+
 mas_installed_apps:
   - { id: 425264550, name: "Blackmagic Disk Speed Test (3.0)" }
   - { id: 411643860, name: "DaisyDisk (4.3.2)" }
