Enhance playbook output

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,9 +20,9 @@
   changed_when: false
 
 - name: Ensure configured MAS apps are installed.
-  command: mas install "{{ item }}"
-  with_items: "{{ mas_installed_app_ids }}"
-  when: "'{{ item }}' not in mas_list.stdout"
+  command: mas install "{{ item.id|default(item) }}"
+  with_items: "{{ mas_installed_apps + mas_installed_app_ids }}"
+  when: "'{{ item.id|default(item) }}' not in mas_list.stdout"
 
 - name: Upgrade all apps (if configured).
   command: mas upgrade
