Switch from deprecated always_run to check_mode and bump min Ansible version.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,7 @@
 - name: List installed MAS apps.
   command: mas list
   register: mas_list
-  always_run: yes
+  check_mode: no
   changed_when: false
 
 - name: Ensure configured MAS apps are installed.
