--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,35 @@
 ---
 sudo: required
 language: objective-c
-# 10.13 (see https://docs.travis-ci.com/user/osx-ci-environment/#OS-X-Version)
-osx_image: xcode9.3
+
+# Reference for OS X Versions:
+# https://docs.travis-ci.com/user/reference/osx/#OS-X-Version
+matrix:
+  include:
+    # High Sierra (10.13)
+    - os: osx
+      osx_image: xcode9.3
+    # Sierra (10.12)
+    - os: osx
+      osx_image: xcode9.2
+    # El Capitan (10.11)
+    - os: osx
+      osx_image: xcode8
 
 before_install:
+  # Install role dependencies. Do this here, using newer OpenSSL version and a
+  # virtualenv because older macOS versions will fail with the system version of
+  # OpenSSL and Python if done later.
+  - brew upgrade openssl || brew install openssl || true
+  - brew upgrade python2 || brew install python2 || true
+  - sudo -H pip install -U virtualenv
+  - virtualenv --python=/usr/local/bin/python2.7 .venv
+  - source .venv/bin/activate
+  - pip install ansible
+  - python -c "import ssl; print(ssl.OPENSSL_VERSION)"
+  - ansible-galaxy install -r requirements.yml -p ./roles
+  - deactivate
+
   # Uninstall existing brew installation.
   - curl -sLO https://raw.githubusercontent.com/Homebrew/install/master/uninstall
   - chmod +x ./uninstall
@@ -14,14 +39,23 @@ before_install:
   - sudo rm -rf /usr/local/bin/brew
 
 install:
-  # Install pip.
-  - sudo easy_install pip
+  # Get macOS version string.
+  - macos_version=$(sw_vers -productVersion)
+
+  # Install pip (macOS version dependent).
+  - |
+    if [[ "$macos_version" == 10.13.* ]]; then
+      sudo easy_install pip
+    else
+      # See: https://stackoverflow.com/a/49748494/100134
+      curl https://bootstrap.pypa.io/get-pip.py | sudo python
+    fi
 
   # Install Ansible.
-  - sudo pip install ansible
+  - sudo -H pip install ansible
 
   # Add ansible.cfg to pick up roles path.
-  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - "{ echo '[defaults]'; echo 'roles_path = ../:../roles:./roles'; } >> ansible.cfg"
 
   # Add a hosts file.
   - sudo mkdir -p /etc/ansible
