--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,20 +3,27 @@
   homebrew: name=mas state=present
 
 - name: Get MAS account status
-  shell: 'mas account'
+  command: mas account
   register: mas_account_result
   failed_when: mas_account_result.rc > 1
   changed_when: false
 
 - name: Sign in to MAS when email and password are provided.
-  shell: 'mas signin "{{ mas_email }}" "{{ mas_password }}"'
+  command: 'mas signin "{{ mas_email }}" "{{ mas_password }}"'
   register: mas_signin_result
-  when: mas_account_result.rc == 1 and mas_email != '' and mas_password != '' and not mas_signin_dialog
+  when:
+    - mas_account_result.rc == 1
+    - mas_email
+    - mas_password
+    - not mas_signin_dialog
 
 - name: Sign in to MAS when email is provided, and complete password and 2FA using dialog.
-  shell: 'mas signin "{{ mas_email }}" "{{ mas_password }}" --dialog'
+  command: 'mas signin "{{ mas_email }}" "{{ mas_password }}" --dialog'
   register: mas_signin_result
-  when: mas_signin_dialog and mas_account_result.rc == 1 and mas_email != ''
+  when:
+    - mas_signin_dialog
+    - mas_account_result.rc == 1
+    - mas_email
 
 - name: List installed MAS apps.
   command: mas list
