--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ sudo: required
 language: objective-c
 
 # Reference for OS X Versions:
-# https://docs.travis-ci.com/user/reference/osx/#OS-X-Version
+# https://docs.travis-ci.com/user/reference/osx/#macos-version
 matrix:
   include:
+    # Mojave (10.14)
+    - os: osx
+      osx_image: xcode11
     # High Sierra (10.13)
     - os: osx
       osx_image: xcode10.1
