--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
   include:
     # Mojave (10.14)
     - os: osx
-      osx_image: xcode11
+      osx_image: xcode11.2
     # High Sierra (10.13)
     - os: osx
       osx_image: xcode10.1
@@ -35,7 +35,6 @@ before_install:
   - sudo rm -rf /usr/local/Caskroom
   - sudo rm -rf /usr/local/bin/brew
 
-install:
   # Get macOS version string.
   - macos_version=$(sw_vers -productVersion)
 
@@ -48,6 +47,15 @@ install:
       curl https://bootstrap.pypa.io/get-pip.py | sudo python
     fi
 
+  # Unset git protocol.version to resolve issue with xcode10.1 (10.13) build.
+  - |
+    if [[ "$macos_version" == 10.13.* ]]; then
+      echo "Unsetting git config protocol.version"
+      git config --global --unset protocol.version
+      git config --list --show-origin
+    fi
+
+install:
   # Install Ansible.
   - sudo -H pip install ansible
 
