--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ matrix:
       osx_image: xcode10.1
 
 before_install:
+  # TODO: Remove this after the following issue is fixed:
+  # https://travis-ci.community/t/missed-pip-after-xcode-image-update/7802
+  - sudo easy_install pip
+  - pip install --upgrade pip
+
   # Install role dependencies. Do this here, using newer OpenSSL version and a
   # virtualenv because older macOS versions will fail with the system version of
   # OpenSSL and Python if done later.
