--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,6 @@ mas_installed_apps:
   - { id: 411643860, name: "DaisyDisk (4.3.2)" }
   - { id: 498486288, name: "Quick Resizer (1.9)" }
   - { id: 497799835, name: "Xcode (8.1)" }
-
+mas_installed_apps_list_file: ""
 mas_upgrade_all_apps: false
 mas_signin_dialog: false
