Closes: https://github.com/geerlingguy/ansible-role-mas/issues/27
    Set a default variable for the full path to the mas binary

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,14 +3,14 @@
   homebrew: name=mas state=present
 
 - name: Get MAS account status
-  command: mas account
+  command: '{{ mas_binary }} account'
   register: mas_account_result
   failed_when: mas_account_result.rc > 1
   check_mode: false
   changed_when: false
 
 - name: Sign in to MAS when email and password are provided.
-  command: 'mas signin "{{ mas_email }}" "{{ mas_password }}"'
+  command: '{{ mas_binary }} signin "{{ mas_email }}" "{{ mas_password }}"'
   register: mas_signin_result
   when:
     - mas_account_result.rc == 1
@@ -19,7 +19,7 @@
     - not mas_signin_dialog
 
 - name: Sign in to MAS when email is provided, and complete password and 2FA using dialog.
-  command: 'mas signin "{{ mas_email }}" "{{ mas_password }}" --dialog'
+  command: '{{ mas_binary }} signin "{{ mas_email }}" "{{ mas_password }}" --dialog'
   register: mas_signin_result
   when:
     - mas_signin_dialog
@@ -27,16 +27,16 @@
     - mas_email | bool
 
 - name: List installed MAS apps.
-  command: mas list
+  command: '{{ mas_binary }} list'
   register: mas_list
   check_mode: false
   changed_when: false
 
 - name: Ensure configured MAS apps are installed.
-  command: mas install "{{ item.id|default(item) }}"
+  command: '{{ mas_binary }} install "{{ item.id|default(item) }}"'
   with_items: "{{ mas_installed_apps + mas_installed_app_ids }}"
   when: (item.id | default(item) | string) not in mas_list.stdout
 
 - name: Upgrade all apps (if configured).
-  command: mas upgrade
+  command: '{{ mas_binary }} upgrade'
   when: mas_upgrade_all_apps
