--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,5 +8,8 @@ mas_installed_apps:
   - {id: 498486288, name: "Quick Resizer (1.9)"}
   - {id: 497799835, name: "Xcode (8.1)"}
 
+mas_installation_async: 3600
+mas_installation_poll: 10
+
 mas_upgrade_all_apps: false
 mas_signin_dialog: false
